--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,10 @@
   <packaging>jar</packaging>
 
   <properties>
-      <dropwizard.version>0.8.0-rc2</dropwizard.version>
+      <!--dropwizard.version>0.8.0-rc2</dropwizard.version-->
+      <!-- Ok for JettyTomcat-->
+      <!-- but jar version clash on weblogic java.lang.ClassCastException: org.slf4j.impl.JDK14LoggerAdapter cannot be cast to ch.qos.logback.classic.Logger -->
+      <dropwizard.version>0.8.0-rc1</dropwizard.version>
   </properties>
   
   <dependencies>
