--- a/src/it/wiz-to-war-integration-tests/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/pom.xml
@@ -13,8 +13,15 @@
   <modules>
     <module>sample-servlets</module>
     <module>sample-web-resources</module>
-    <!--module>sample-rest-resources</module-->
+    <module>sanity-check-sample-jee-war</module>
+    <module>sample-wiz-app</module>
+    <module>sanity-check-sample-wiz-app-war</module>
   </modules>
+
+  <properties>
+    <dropwizard.version>0.8.0-rc1</dropwizard.version>
+  </properties>
+
 
   <dependencyManagement>
     <dependencies>
@@ -22,6 +29,11 @@
         <groupId>be.fluid-it.tools.dw</groupId>
         <artifactId>wiz-to-war</artifactId>
         <version>testing</version>
+      </dependency>
+      <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-core</artifactId>
+        <version>${dropwizard.version}</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -32,6 +44,11 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>1.7.6</version>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.1.2</version>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -66,6 +83,19 @@
           </configuration>
         </plugin>
         <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.18.1</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.eclipse.jetty</groupId>
           <artifactId>jetty-maven-plugin</artifactId>
           <version>9.2.6.v20141205</version>
@@ -84,6 +114,19 @@
             </connectors>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat7-maven-plugin</artifactId>
+          <version>2.0</version>
+          <configuration>
+            <port>8888</port>
+          </configuration>
+        </plugin>
+        <!--plugin>
+          <groupId>org.apache.maven</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version></version>
+        </plugin-->
       </plugins>
     </pluginManagement>
   </build>
