Restructured integration tests

--- a/src/it/wiz-to-war-integration-tests/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/pom.xml
@@ -3,131 +3,102 @@
          xsi:schemaLocation="
 		http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>be.fluid-it.tools.dw.it</groupId>
-  <artifactId>wiz-to-war-integration-tests</artifactId>
-  <version>testing</version>
-  <packaging>pom</packaging>
+    <groupId>be.fluid-it.tools.dw.it</groupId>
+    <artifactId>wiz-to-war-integration-tests</artifactId>
+    <version>testing</version>
+    <packaging>pom</packaging>
 
-  <modules>
-    <module>sample-servlets</module>
-    <module>sample-web-resources</module>
-    <module>sanity-check-sample-jee-war</module>
-    <module>sample-wiz-app</module>
-    <module>sanity-check-sample-wiz-app-war</module>
-  </modules>
+    <modules>
+        <module>test-support</module>
+        <module>sample-servlets</module>
+        <module>sample-web-resources</module>
+        <module>sample-wiz-app</module>
+        <module>sanity-checks-parent</module>
+        <module>sanity-check-sample-jee-war</module>
+        <module>sanity-check-sample-wiz-app-war</module>
+    </modules>
 
-  <properties>
-    <dropwizard.version>0.8.0-rc1</dropwizard.version>
-  </properties>
+    <properties>
+        <dropwizard.version>0.8.0-rc1</dropwizard.version>
+    </properties>
 
-
-  <dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>be.fluid-it.tools.dw</groupId>
+                <artifactId>wiz-to-war</artifactId>
+                <version>testing</version>
+            </dependency>
+            <dependency>
+                <groupId>io.dropwizard</groupId>
+                <artifactId>dropwizard-core</artifactId>
+                <version>${dropwizard.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>3.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.6</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.1.2</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>be.fluid-it.tools.dw</groupId>
-        <artifactId>wiz-to-war</artifactId>
-        <version>testing</version>
-      </dependency>
-      <dependency>
-        <groupId>io.dropwizard</groupId>
-        <artifactId>dropwizard-core</artifactId>
-        <version>${dropwizard.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>1.7.6</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.1.2</version>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <version>1.1.2</version>
-      </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>be.fluid-it.tools.dw.it</groupId>
+            <artifactId>test-support</artifactId>
+            <version>testing</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-  </dependencyManagement>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>1.3.2</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>2.3</version>
-          <configuration>
-            <failOnMissingWebXml>false</failOnMissingWebXml>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>2.18.1</version>
-          <executions>
-            <execution>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>9.2.6.v20141205</version>
-          <configuration>
-            <!-- Periodically scan to reload servlet if changes found -->
-            <scanintervalseconds>10</scanintervalseconds>
-
-            <!-- Path where servlet will be accessed in this case http://localhost:9090/MyApp-->
-            <webapp>
-              <contextpath>/</contextpath>
-            </webapp>
-            <connectors>
-              <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                <port>8888</port>
-              </connector>
-            </connectors>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat7-maven-plugin</artifactId>
-          <version>2.0</version>
-          <configuration>
-            <port>8888</port>
-          </configuration>
-        </plugin>
-        <!--plugin>
-          <groupId>org.apache.maven</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version></version>
-        </plugin-->
-      </plugins>
-    </pluginManagement>
-  </build>
-</project>  
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.3</version>
+                    <configuration>
+                        <failOnMissingWebXml>false</failOnMissingWebXml>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+</project>
