--- a/src/it/wiz-to-war-integration-tests/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/pom.xml
@@ -15,9 +15,11 @@
         <module>sample-servlets</module>
         <module>sample-web-resources</module>
         <module>sample-wiz-app</module>
+        <module>sample-wiz-swagger-app</module>
         <module>sanity-checks-parent</module>
-        <module>sanity-check-sample-jee-war</module>
+        <!--module>sanity-check-sample-jee-war</module-->
         <module>sanity-check-sample-wiz-app-war</module>
+        <!--module>sanity-check-sample-wiz-swagger-app-war</module-->
     </modules>
 
     <properties>
