--- a/src/it/wiz-to-war-integration-tests/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/pom.xml
@@ -17,7 +17,7 @@
         <module>sample-wiz-app</module>
         <module>sample-wiz-swagger-app</module>
         <module>sanity-checks-parent</module>
-        <!--module>sanity-check-sample-jee-war</module-->
+        <module>sanity-check-sample-jee-war</module>
         <module>sanity-check-sample-wiz-app-war</module>
         <!--module>sanity-check-sample-wiz-swagger-app-war</module-->
     </modules>
