--- a/src/it/wiz-to-war-integration-tests/sample-wiz-app/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/sample-wiz-app/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <scope>provided</scope>
+      <!--scope>provided</scope-->
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
