--- a/src/it/wiz-to-war-integration-tests/sanity-check-sample-wiz-app-war/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/sanity-check-sample-wiz-app-war/pom.xml
@@ -74,6 +74,9 @@
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
+                <configuration>
+                    <port>8886</port>
+                </configuration>
                 <executions>
                     <execution>
                         <id>start-tomcat-server</id>
