--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,9 @@
 		http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>be.fluid-it.tools.dropwizard</groupId>
+  <groupId>Chan</groupId>
   <artifactId>wizard-in-a-box</artifactId>
-  <version>0.8-0.1-SNAPSHOT</version>
+  <version>0.8-1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
