Changed artifactId to wizard-in-a-box-...

--- a/src/it/wiz-to-war-integration-tests/sample-servlets/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/sample-servlets/pom.xml
@@ -6,8 +6,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>be.fluid-it.tools.dw.it</groupId>
-    <artifactId>wiz-to-war-integration-tests</artifactId>
+    <groupId>be.fluid-it.tools.dropwizard.it</groupId>
+    <artifactId>wizard-in-a-box-integration-tests</artifactId>
     <version>testing</version>
   </parent>
 
