--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 		http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   
-  <groupId>Chan</groupId>
+  <groupId>be.fluid-it.tools.dropwizard</groupId>
   <artifactId>wizard-in-a-box</artifactId>
   <version>0.8-1-SNAPSHOT</version>
   <packaging>jar</packaging>
