--- a/src/it/wiz-to-war-integration-tests/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/pom.xml
@@ -5,8 +5,8 @@
 		http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>be.fluid-it.tools.dw.it</groupId>
-    <artifactId>wiz-to-war-integration-tests</artifactId>
+    <groupId>be.fluid-it.tools.dropwizard.it</groupId>
+    <artifactId>wizard-in-a-box-integration-tests</artifactId>
     <version>testing</version>
     <packaging>pom</packaging>
 
