--- a/src/it/wiz-to-war-integration-tests/test-support/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/test-support/pom.xml
@@ -5,12 +5,12 @@
 		http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>be.fluid-it.tools.dw.it</groupId>
+    <groupId>be.fluid-it.tools.dropwizard.it</groupId>
     <artifactId>test-support</artifactId>
     <version>testing</version>
-    <!-- TODO -->
+    <!-- TODO Get rid of duplication -->
     <properties>
-        <dropwizard.version>0.8.0-rc1</dropwizard.version>
+        <dropwizard.version>0.8.0</dropwizard.version>
     </properties>
 
     <dependencies>
