Moved maven-war-plugin configuration

--- a/src/it/wiz-to-war-integration-tests/sample-web-resources/pom.xml
+++ b/src/it/wiz-to-war-integration-tests/sample-web-resources/pom.xml
@@ -14,5 +14,15 @@
   <artifactId>sample-web-resources</artifactId>
   <packaging>war</packaging>
 
-
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <failOnMissingWebXml>false</failOnMissingWebXml>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
