--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
   <artifactId>wizard-in-a-box</artifactId>
   <version>0.8-1-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <name>Wizard in a box</name>
   <description>Wrapper to deploy a DropWizard application as a war on a JEE container</description>
   <url>https://github.com/rvs-fluid-it/wizard-in-a-box</url>
   <licenses>
