--- a/src/it/wizard-in-a-box-integration-tests/sample-wiz-app-runner/src/main/resources/hello-world-as-dw-jar-simple-server.yml
+++ b/src/it/wizard-in-a-box-integration-tests/sample-wiz-app-runner/src/main/resources/hello-world-as-dw-jar-simple-server.yml
@@ -3,7 +3,7 @@ defaultName: Stranger
 
 server:
   type: simple
-  applicationContextPath: /application
+  applicationContextPath: /api
   adminContextPath: /admin
   connector:
     type: http
