--- a/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-app-war/src/main/resources/hello-world-as-dw-war.yml
+++ b/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-app-war/src/main/resources/hello-world-as-dw-war.yml
@@ -3,3 +3,7 @@ defaultName: Stranger
 
 server:
   type: bridge
+  applicationContextPath: /api
+  adminContextPath: /admin
+  servletsMappedFromRootContext:
+    - assets
