--- a/src/it/wizard-in-a-box-integration-tests/sample-wiz-swagger-app-runnner/src/main/resources/hello-world-as-dw-jar.yml
+++ b/src/it/wizard-in-a-box-integration-tests/sample-wiz-swagger-app-runnner/src/main/resources/hello-world-as-dw-jar.yml
@@ -2,6 +2,7 @@ template: Hello, %s!
 defaultName: Stranger
 
 server:
+  rootPath: /api/*
   applicationConnectors:
     - type: http
       port: 8880
