--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   
   <groupId>be.fluid-it.tools.dropwizard</groupId>
   <artifactId>wizard-in-a-box</artifactId>
-  <version>0.8-2-SNAPSHOT</version>
+  <version>0.9-3-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Wizard in a box</name>
   <description>Wrapper to deploy a DropWizard application as a war on a JEE container</description>
@@ -39,7 +39,7 @@
   </scm>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dropwizard.version>0.8.2</dropwizard.version>
+    <dropwizard.version>0.9.0</dropwizard.version>
   </properties>
   <distributionManagement>
     <repository>
@@ -115,7 +115,8 @@
                     <goal>test</goal>
                   </goals>
                   <properties>
-                    <it.project.version>${project.version}</it.project.version>
+                    <wizard.in.a.box.version>${project.version}</wizard.in.a.box.version>
+                    <dropwizard.version>${dropwizard.version}</dropwizard.version>
                   </properties>
                 </configuration>
               </execution>
