--- a/src/it/wizard-in-a-box-integration-tests/pom.xml
+++ b/src/it/wizard-in-a-box-integration-tests/pom.xml
@@ -24,7 +24,10 @@
     </modules>
 
     <properties>
-        <dropwizard.version>0.8.1</dropwizard.version>
+      <!-- Only needed to enable running from the IDE -->
+      <!-- When building wizard-in-a-box the mvn-invoker-plugin will propagate the versions from the wizard-in-a-box pom -->
+      <dropwizard.version>0.9.0</dropwizard.version>
+      <wizard.in.a.box.version>0.9-3-SNAPSHOT</wizard.in.a.box.version>
     </properties>
 
     <dependencyManagement>
@@ -47,12 +50,12 @@
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.7.6</version>
+                <version>1.7.12</version>
             </dependency>
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
-                <version>1.1.2</version>
+                <version>1.1.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -60,7 +63,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
