--- a/src/it/wizard-in-a-box-integration-tests/sample-wiz-app/pom.xml
+++ b/src/it/wizard-in-a-box-integration-tests/sample-wiz-app/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
-      <!--scope>provided</scope-->
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
