--- a/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-swagger-app-war/pom.xml
+++ b/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-swagger-app-war/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>be.fluid-it.tools.dropwizard</groupId>
       <artifactId>wizard-in-a-box</artifactId>
-      <version>${it.project.version}</version>
+      <version>${wizard.in.a.box.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
