Made ManagedDataSourceFactory a strategy

--- a/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-app-war/pom.xml
+++ b/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-app-war/pom.xml
@@ -47,6 +47,11 @@
       <version>${wizard.in.a.box.version}</version>
     </dependency>
     <dependency>
+        <groupId>io.dropwizard</groupId>
+        <artifactId>dropwizard-db</artifactId>
+        <version>${dropwizard.version}</version>
+    </dependency>
+    <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>sample-assets</artifactId>
       <version>${project.version}</version>
