--- a/src/it/wizard-in-a-box-integration-tests/pom.xml
+++ b/src/it/wizard-in-a-box-integration-tests/pom.xml
@@ -26,10 +26,10 @@
     <properties>
       <!-- Only needed to enable running from the IDE -->
       <!-- When building wizard-in-a-box the mvn-invoker-plugin will propagate the versions from the wizard-in-a-box pom -->
-      <dropwizard.version>0.9.1</dropwizard.version>
+      <dropwizard.version>1.1.0</dropwizard.version>
       <dropwizard.slf4j.version>1.7.12</dropwizard.slf4j.version>
-      <dropwizard.logback.version>1.1.3</dropwizard.logback.version>
-      <wizard.in.a.box.version>0.9-3-SNAPSHOT</wizard.in.a.box.version>
+      <dropwizard.logback.version>1.2.3</dropwizard.logback.version>
+      <wizard.in.a.box.version>1.1-1-SNAPSHOT</wizard.in.a.box.version>
     </properties>
 
     <dependencyManagement>
@@ -57,6 +57,11 @@
             <dependency>
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
+                <version>${dropwizard.logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
                 <version>${dropwizard.logback.version}</version>
             </dependency>
         </dependencies>
