--- a/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-app-war/pom.xml
+++ b/src/it/wizard-in-a-box-integration-tests/sanity-check-sample-wiz-app-war/pom.xml
@@ -74,6 +74,10 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-core</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
